Details
-
Bug
-
Resolution: Done
-
P1: Critical
-
5.10.1
-
None
-
Android, iOS, Windows RT
-
710f9507c0ebf01d9e9f717e676b9c3b1b94ee8a
Description
When the map is double clicked with multiple fingers (2 or more) then the MouseArea's "doubleClick" and "longPress" signals are not emitted anymore:
import QtQuick 2.7 import QtQuick.Controls 2.0 import QtQuick.Layouts 1.3 import QtLocation 5.9 import QtPositioning 5.8 ApplicationWindow { visible: true width: 640 height: 480 title: qsTr("Hello World") Map { id: map anchors.fill: parent plugin: Plugin { name: "osm" } MouseArea { anchors.fill: parent acceptedButtons: Qt.LeftButton | Qt.RightButton onDoubleClicked: { var mouseGeoPos = map.toCoordinate(Qt.point(mouse.x, mouse.y)); var preZoomPoint = map.fromCoordinate(mouseGeoPos, false); if (mouse.button === Qt.LeftButton) { map.zoomLevel = Math.floor(map.zoomLevel)+1; } else if (mouse.button === Qt.RightButton) { map.zoomLevel = Math.floor(map.zoomLevel)-1; } var postZoomPoint = map.fromCoordinate(mouseGeoPos, false); var dx = postZoomPoint.x - preZoomPoint.x; var dy = postZoomPoint.y - preZoomPoint.y; var mapCenterPoint = Qt.point(map.width / 2.0 + dx, map.height / 2.0 + dy); map.center = map.toCoordinate(mapCenterPoint); } } } }
The problem happens sometimes on Android, iOS, Windows RT. It can be best reproduced 100% on an iPhone 6 Plus (iOS 11).
Attachments
Issue Links
- relates to
-
QTBUG-66775 [REG] MapQuickItem consumes input events preventing interaction with Map
-
- Closed
-
-
QTBUG-68771 Map + MouseArea multi-touch issues
-
- Closed
-
- resulted in
-
QTBUG-70998 [REG] Map + MouseArea double multi-touch problem
-
- Closed
-
For Gerrit Dashboard: QTBUG-65648 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
228484,6 | setGrabberItem: consistently call touchUngrabEvent or mouseUngrabEvent | 5.11 | qt/qtdeclarative | Status: MERGED | +2 | 0 |